[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/item.gd" type="Script" id=1]

[node name="Item" type="Sprite"]

centered = false
region_rect = Rect2( 0, 0, 192, 320 )
script/script = ExtResource( 1 )

[node name="Button" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="mouse_enter" from="Button" to="." method="_on_mouse_enter"]

[connection signal="mouse_exit" from="Button" to="." method="_on_mouse_exit"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]


